# mlap-graph2seq

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  runner.py
mlap/: main.py  util.py
mlap/nn/: MLAP.py  base.py  decoders.py
mlap/tasks/: base.py
mlap/tasks/ogb/: __init__.py  code.py
