[tool.poetry]
name = "mlap"
version = "0.1.0"
description = ""
authors = ["iTakeshi <itakeshi.net@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.7.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
dgl = "^0.5.3"
ogb = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
